# random-forest-svm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Dokumentacja_wstępna.md  dokumentacja_końcowa.md
docs/copar_exp_src/: anaiza_porownawcza.md
notebooks/: 01-data_exploration_adn_norm.ipynb
random_forest_svm/: hybrid_random_forest.py  train.py
random_forest_svm/data/: config.py  data_processor.py  download_data.py  load_data.py  preprocess_data.py
random_forest_svm/experiments/: comparative_experiment.py  perform_hyperparameters_experiment.py  svm_proportion_experiment.py
random_forest_svm/id3_tree/: id3_tree.py
random_forest_svm/utils/: id3_utils.py  model_utils.py  training_utils.py
