[project]
name = "random_forest_svm"
version = "0.0.1"
description = "Random forest with SVM in the classification task."
authors = [
  { name = "M&M" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "ucimlrepo>=0.0.7",
    "numpy>=2.1.3",
    "mlflow>=2.18.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[dependency-groups]
dev = [
    "isort>=5.13.2",
]
